Arduino - Android Studio -Java

--- a/BitirmeProjesi/app/src/main/res/layout/activity_main.xml
+++ b/BitirmeProjesi/app/src/main/res/layout/activity_main.xml
@@ -137,7 +137,7 @@
         app:layout_constraintVertical_bias="0.499" />
 
     <TextView
-        android:id="@+id/txtNabiz2"
+        android:id="@+id/mTxtOksijen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="76dp"
@@ -153,12 +153,12 @@
         android:id="@+id/txtSicaklik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
+        android:layout_marginStart="120dp"
         android:text="0"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.746" />
+        app:layout_constraintVertical_bias="0.723" />
 </androidx.constraintlayout.widget.ConstraintLayout>
