--- a/BitirmeProjesi/app/src/main/res/layout/activity_analiz_sayfasi.xml
+++ b/BitirmeProjesi/app/src/main/res/layout/activity_analiz_sayfasi.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/analizsayfasi"
+    android:background="@drawable/analizsayfasifree"
     tools:context=".AnalizSayfasi">
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/sicaklikDegeri10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.882" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/sicaklikKullanici"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -38,7 +38,7 @@
         app:layout_constraintVertical_bias="0.882" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/sicaklikDunya"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -53,7 +53,7 @@
         app:layout_constraintVertical_bias="0.882" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/oksijenDegeri10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -68,7 +68,7 @@
         app:layout_constraintVertical_bias="0.558" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/oksijenKullanici"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -83,7 +83,7 @@
         app:layout_constraintVertical_bias="0.558" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/oksijenDunya"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -98,7 +98,7 @@
         app:layout_constraintVertical_bias="0.558" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/nabizDegeri10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -113,7 +113,7 @@
         app:layout_constraintVertical_bias="0.256" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/nabizKullanici"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -128,7 +128,7 @@
         app:layout_constraintVertical_bias="0.256" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/nabizDunya"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
