--- a/BitirmeProjesi/app/src/main/res/layout/activity_nabiz_sayfasi.xml
+++ b/BitirmeProjesi/app/src/main/res/layout/activity_nabiz_sayfasi.xml
@@ -18,7 +18,7 @@
         app:srcCompat="?android:attr/activatedBackgroundIndicator" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/mTxtNabiz"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
