--- a/BitirmeProjesi/app/src/main/res/layout/activity_sicaklik_sayfasi.xml
+++ b/BitirmeProjesi/app/src/main/res/layout/activity_sicaklik_sayfasi.xml
@@ -8,7 +8,7 @@
     tools:context=".SicaklikSayfasi">
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/mTxtSicaklik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
